# gnvim

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  com.github.vhakulinen.gnvim.Devel.yml
assets/icons/: README.md
desktop/: gnvim.desktop
examples/: build-syntect-pack.rs
flatpak-helper/: Cargo.toml
flatpak-helper/src/: main.rs
gio-compat/: Cargo.toml
gio-compat/src/: lib.rs
gnvim/: Cargo.toml  build.rs
gnvim/resources/: application.ui  shell.ui
gnvim/src/: colors.rs  main.rs
gnvim/src/components/appwindow/: imp.rs  mod.rs
gnvim/src/components/grid/: buffer.rs  imp.rs  mod.rs
gnvim/src/components/shell/: imp.rs  mod.rs
gnvim/src/font/: imp.rs  mod.rs
into-value-proc/: Cargo.toml
lib/flatpak-helper/: Cargo.toml
lib/flatpak-helper/src/: main.rs
lib/gio-compat/: Cargo.toml
lib/gio-compat/src/: lib.rs
lib/into-value/: Cargo.toml
lib/into-value-proc/src/: lib.rs
lib/into-value/src/: lib.rs
lib/nvim-rs/: Cargo.toml
lib/nvim-rs/src/: client.rs  gen.rs  lib.rs
lib/nvim-rs/src/rpc/: caller.rs  message.rs  mod.rs  reader.rs  writer.rs
lib/nvim-rs/src/types/: gen.rs  manual.rs  mod.rs
lib/nvim-rs/tests/: client.rs  nvim.rs
nvim-rs/: Cargo.toml  generate.sh
nvim-rs/src/: client.rs  gen.rs  into_value.rs  lib.rs
nvim-rs/src/rpc/: writer.rs
nvim-rs/src/types/: gen.rs  manual.rs
nvim-rs/tests/: client.rs  nvim.rs
runtime/: plugin.vim
runtime/autoload/: gnvim.vim
runtime/autoload/gnvim/: cmdline.vim  cursor.vim  cursor_tooltip.vim  hover.vim  popupmenu.vim  tabline.vim
runtime/doc/: gnvim.txt  tags
runtime/lua/gnvim/: init.lua
runtime/plugin/: gnvim.vim
runtime/plugin/gnvim/: cursor_tooltip.vim  hover.vim
runtime/web-resources/: highlight.pack.js
scripts/: attrtest.lua  generate-bindings.sh  helptags.sh
src/: args.rs  error.rs  main.rs  nvim_bridge.rs  thread_guard.rs
src/nvim_bridge/: mod.rs  tests.rs
src/nvim_gio/: compat.rs  mod.rs
src/ui/: animation.rs  cmdline.rs  color.rs  common.rs  cursor_tooltip.rs  font.rs  messages.rs  mod.rs  popupmenu.rs  state.rs  tabline.rs  ui.rs  wildmenu.rs  window.rs
src/ui/grid/: context.rs  cursor.rs  grid.rs  mod.rs  render.rs  row.rs  surfaces.rs
src/ui/popupmenu/: completion_item_widget.rs  lazy_loader.rs  mod.rs  popupmenu.rs
sublime-syntaxes/: all.pack
ui/: Cargo.toml  build.rs
ui/data/: com.github.vhakulinen.gnvim.gschema.xml.in
ui/data/resources/: application.ui  buffer-listitem.ui  cmdline.ui  file-listitem.ui  grid.ui  navfile.ui  omnibar.ui  popupmenu.ui  popupmenu_row.ui  resources.gresource.xml  shell.ui  tab.ui  tabline.ui
ui/resources/: application.ui  cmdline.ui  grid.ui  message.ui  messages.ui  popupmenu_row.ui  resources.gresource.xml  shell.ui  tab.ui  tabline.ui
ui/src/: api.rs  app.rs  arguments.rs  boxed.rs  buffer-listobject.rs  child_iter.rs  colors.rs  fd.rs  files-sorter.rs  input.rs  macros.rs  main.rs  math.rs  mode_info.rs  mouse.rs  render.rs
ui/src/components/: mod.rs  navfile.rs  overflower.rs
ui/src/components/appwindow/: imp.rs  mod.rs  style.css
ui/src/components/cmdline/: imp.rs  mod.rs
ui/src/components/cursor/: blink.rs  imp.rs  mod.rs
ui/src/components/externalwin/: imp.rs  mod.rs
ui/src/components/fixedz/: imp.rs  mod.rs
ui/src/components/fixedz/layout-child/: imp.rs  mod.rs
ui/src/components/fixedz/layout-manager/: imp.rs  mod.rs
ui/src/components/grid/: buffer.rs  imp.rs  mod.rs
ui/src/components/grid-buffer/: imp.rs  mod.rs  row.rs
ui/src/components/maxsize/: mod.rs
ui/src/components/message/: mod.rs
ui/src/components/messages/: mod.rs  object.rs
ui/src/components/msgwin/: imp.rs  mod.rs
ui/src/components/omnibar/: imp.rs  mod.rs
ui/src/components/popupmenu/: imp.rs  kind.rs  mod.rs  object.rs
ui/src/components/popupmenu/model/: imp.rs  mod.rs
ui/src/components/popupmenu/row/: imp.rs  mod.rs
ui/src/components/shell/: imp.rs  mod.rs
ui/src/components/tabline/: imp.rs  mod.rs
ui/src/components/tabline/tab/: imp.rs  mod.rs
ui/src/font/: imp.rs  mod.rs
ui/src/nvim/: imp.rs  mod.rs
