[package]
name = "gnvim"
version = "0.1.0"
authors = ["Ville Hakulinen <ville.hakulinen@gmail.com>"]
edition = "2018"

[profile.dev]
debug = true

[features]
unstable = []

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
structopt = "0.3"
pangocairo = "0.14"
pin-project = "1"
futures = "0.3"
async-trait = "0.1"
nvim-rs = "0.3.1"

[dependencies.gtk]
version = "0.14"
features = ["v3_20"]
