[package]
name = "gnvim"
version = "0.3.2-dev"
authors = ["Ville Hakulinen <ville.hakulinen@gmail.com>"]
edition = "2021"

[dependencies]
futures = "0.3"
rmpv = { version = "1.0", features = ["with-serde"] }
once_cell = "1.17"
clap = { version = "3.1.18", features = ["derive", "env"] }
libc = "0.2"
cfg-if = "1.0"

[dependencies.gtk]
package = "gtk4"
version = "0.6"
features = ["v4_4"]

[dependencies.glib]
version = "0.17"
features = ["log_macros"]

[dependencies.pango]
version = "0.17"
features = ["v1_50"]

[dependencies.nvim]
package = "nvim-rs"
path = "../lib/nvim-rs"

[dependencies.gio-compat]
path = "../lib/gio-compat"

[build-dependencies]
glib-build-tools = "0.17.0"
