[package]
name = "gnvim"
version = "0.3.2-dev"
authors = ["Ville Hakulinen <ville.hakulinen@gmail.com>"]
edition = "2021"

[features]
# Enable flatpak specific features.
flatpak = []

[dependencies]
futures = "0.3"
rmpv = { version = "1.0", features = ["with-serde"] }
once_cell = "1.17"
libc = "0.2"
cfg-if = "1.0"

[dependencies.gtk]
package = "gtk4"
version = "0.8"
features = ["v4_12"]

[dependencies.glib]
version = "0.19"
features = ["log_macros"]

[dependencies.pango]
version = "0.19"
features = ["v1_50"]

[dependencies.nvim]
package = "nvim-rs"
path = "../lib/nvim-rs"

[build-dependencies]
glib-build-tools = "0.19"
